<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/rounded_corner"
        android:padding="12dp"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_view_title"
            android:text="@string/mytitle"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="17sp"/>

         <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_view_content"
            android:text="@string/content"
            android:textColor="@color/black"
            android:textSize="15sp"/>

         <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_view_time"
            android:text="@string/date"
            android:textColor="@color/black"
            android:gravity="right"
            android:textSize="9sp"
             tools:ignore="RtlHardcoded,SmallSp" />


    </LinearLayout>

</RelativeLayout>